--- a/menu.html
+++ b/menu.html
@@ -88,7 +88,7 @@
     </section>
     
     <section>
-        <h2 id = "Drinks"><br><br><br><br><br>Drinks</h2>
+        <h2 id = "Drinks"><br><br><br><br><br><br><br>Drinks</h2>
         <h5>Add any of our refreshing beverages to your meal for $2.75</h5>
         <dl>
             <dt>Fountain Drinks</dt>
